--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-cookie": "^6.1.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
