--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-PORT = 9999
-MONGOOSE_URL = "mongodb+srv://naveendgp:naveen2004@cluster0.dolrktg.mongodb.net/?retryWrites=true&w=majority"
+PORT=9999
+MONGOOSE_URL = "mongodb+srv://test:test@cluster0.ppdi5nj.mongodb.net/"
