--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build" ,
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "firebase": "^10.5.2",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-cookies": "^0.1.1",
